--- a/test/pom.xml
+++ b/test/pom.xml
@@ -23,6 +23,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
@@ -97,7 +103,6 @@
 						<goals>
 							<goal>check</goal>
 						</goals>
-						<!-- 예제 7.23 -->
 						<configuration>
 							<rules>
 								<rule>
